[package]
name = "ch-ar-t"
version = "0.1.0"
edition = "2021"
authors = ["Abhinav Yadav <abhinavy14@gmail.com>"]
description = "Image to ASCII art"
homepage = "https://github.com/x404159/ch-ar-t"
repository = "https://github.com/x404159/ch-ar-t"
readme = "README.md"
keywords = ["ascii_art", "image", "graphics"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
fast_image_resize = "4.1.0"
itertools = "0.13.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
term_size = "0.3.2"
zune-image = { version = "0.4.15", default-features = false, features = ["jpeg", "simd", "threads", "qoi"] }
